Fixed unwanted whitespace above the Features Section

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ nav a#pull {
 #feature {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.features {
+.container .features {
   margin: 15% 0 0 0;
 }
 .features li {
